--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
 	"Главная": "Home",
 	"О нас": "About",
 	"Каталог": "Catalog",
+	"Страница не найдена": "Page not found",
 	"Контакты": "Contacts"
 }
