--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
 	"Главная": "Главная",
 	"О нас": "О нас",
 	"Каталог": "Каталог",
+	"Страница не найдена": "Страница не найдена",
 	"Контакты": "Контакты"
 }
