--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
 	"О нас": "About",
 	"Каталог": "Catalog",
 	"Страница не найдена": "Page not found",
-	"Контакты": "Contacts"
+	"Контакты": "Contacts",
+	"Войти": "LogIn",
+	"Зарегистрироваться": "SignUp"
 }
