--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
 	"О нас": "О нас",
 	"Каталог": "Каталог",
 	"Страница не найдена": "Страница не найдена",
-	"Контакты": "Контакты"
+	"Контакты": "Контакты",
+	"Войти": "Войти",
+	"Зарегистрироваться": "Зарегистрироваться"
 }
