--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,8 @@
 	"Страница не найдена": "Page not found",
 	"Контакты": "Contacts",
 	"Войти": "LogIn",
+	"Логин": "Login",
+	"Пароль": "Password",
+	"Авторизация": "Auth",
 	"Зарегистрироваться": "SignUp"
 }
