--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,8 @@
 	"Страница не найдена": "Страница не найдена",
 	"Контакты": "Контакты",
 	"Войти": "Войти",
+	"Логин": "Логин",
+	"Пароль": "Пароль",
+	"Авторизация": "Авторизация",
 	"Зарегистрироваться": "Зарегистрироваться"
 }
