--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,6 @@
 	"Логин": "Логин",
 	"Пароль": "Пароль",
 	"Авторизация": "Авторизация",
+	"Неверный логин или пароль": "Неверный логин или пароль",
 	"Зарегистрироваться": "Зарегистрироваться"
 }
