--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,7 @@
 	"Пароль": "Password",
 	"Авторизация": "Auth",
 	"Неверный логин или пароль": "Incorrect login or password",
-	"Зарегистрироваться": "SignUp"
+	"Зарегистрироваться": "SignUp",
+	"Выйти": "LogOut",
+	"Профиль": "Profile"
 }
