--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,7 @@
 	"Пароль": "Пароль",
 	"Авторизация": "Авторизация",
 	"Неверный логин или пароль": "Неверный логин или пароль",
-	"Зарегистрироваться": "Зарегистрироваться"
+	"Зарегистрироваться": "Зарегистрироваться",
+	"Выйти": "Выйти",
+	"Профиль": "Профиль"
 }
