--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
 	"Неверный логин или пароль": "Неверный логин или пароль",
 	"Зарегистрироваться": "Зарегистрироваться",
 	"Выйти": "Выйти",
-	"Профиль": "Профиль"
+	"Профиль": "Профиль",
+	"Комментарии": "Комментарии"
 }
