--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
 	"Зарегистрироваться": "SignUp",
 	"Выйти": "LogOut",
 	"Профиль": "Profile",
-	"Комментарии": "Comments"
+	"Комментарии": "Comments",
+	"Введите текст комментария": "Enter your message"
 }
