--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
 	"Зарегистрироваться": "Зарегистрироваться",
 	"Выйти": "Выйти",
 	"Профиль": "Профиль",
-	"Комментарии": "Комментарии"
+	"Комментарии": "Комментарии",
+	"Введите текст комментария": "Введите текст комментария"
 }
