fix dynamic reducers, SaveScroll feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
 	"Выйти": "LogOut",
 	"Профиль": "Profile",
 	"Комментарии": "Comments",
+	"Список статей": "Articles list",
 	"Введите текст комментария": "Enter your message"
 }
