--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
 	"Выйти": "Выйти",
 	"Профиль": "Профиль",
 	"Комментарии": "Комментарии",
+	"Список статей": "Список статей",
 	"Введите текст комментария": "Введите текст комментария"
 }
